--- a/src/View/daftar_pengajuan.form
+++ b/src/View/daftar_pengajuan.form
@@ -94,8 +94,8 @@
                       <Group type="103" groupAlignment="2" attributes="0">
                           <Component id="roundedButton1" alignment="2" max="32767" attributes="0"/>
                           <Component id="roundedButton2" alignment="2" max="32767" attributes="0"/>
-                          <Component id="roundedButton3" alignment="2" max="32767" attributes="0"/>
-                          <Component id="roundedButton4" alignment="2" max="32767" attributes="0"/>
+                          <Component id="daftar_pengajuan" alignment="2" max="32767" attributes="0"/>
+                          <Component id="verifikasi" alignment="2" max="32767" attributes="0"/>
                           <Component id="roundedButton5" alignment="2" min="-2" pref="192" max="-2" attributes="0"/>
                           <Component id="roundedButton6" alignment="2" min="-2" pref="192" max="-2" attributes="0"/>
                       </Group>
@@ -111,9 +111,9 @@
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Component id="roundedButton2" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                      <Component id="roundedButton3" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="daftar_pengajuan" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                      <Component id="roundedButton4" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="verifikasi" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Component id="roundedButton5" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
@@ -166,7 +166,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roundedButton2ActionPerformed"/>
               </Events>
             </Component>
-            <Component class="template.RoundedButton" name="roundedButton3">
+            <Component class="template.RoundedButton" name="daftar_pengajuan">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -184,10 +184,10 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roundedButton3ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="daftar_pengajuanActionPerformed"/>
               </Events>
             </Component>
-            <Component class="template.RoundedButton" name="roundedButton4">
+            <Component class="template.RoundedButton" name="verifikasi">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -205,7 +205,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roundedButton4ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verifikasiActionPerformed"/>
               </Events>
             </Component>
             <Component class="template.RoundedButton" name="roundedButton5">
@@ -266,15 +266,36 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                      <Component id="jLabel2" min="-2" pref="250" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="100" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                      <Component id="jLabel2" min="-2" pref="38" max="-2" attributes="0"/>
+                      <EmptySpace pref="16" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JLabel" name="jLabel2">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="SansSerif" size="20" style="3"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Daftar Pengajuan Masuk"/>
+              </Properties>
+            </Component>
+          </SubComponents>
         </Container>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
